force-app/main/default/objects/Account/fields/Fundraising_Methods__c.field-meta.xml
<CustomField>
    <fullName>Fundraising_Methods__c</fullName>
    <inlineHelpText>How do you raise money (all that apply)?</inlineHelpText>
    <label>Fundraising Methods</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Grants</fullName>
            </value>
            <value>
                <fullName>Individual Donors</fullName>
            </value>
            <value>
                <fullName>Fundraising Events</fullName>
            </value>
            <value>
                <fullName>Corporate Donations</fullName>
            </value>
            <value>
                <fullName>Government Funding</fullName>
            </value>
            <value>
                <fullName>Do not raise money</fullName>
            </value>
            <value>
                <fullName>AUCTION</fullName>
                <isActive>false</isActive>
                <label>AUCTION</label>
            </value>
            <value>
                <fullName>Individuals</fullName>
                <isActive>false</isActive>
                <label>Individuals</label>
            </value>
            <value>
                <fullName>TEST</fullName>
                <isActive>false</isActive>
                <label>TEST</label>
            </value>
            <value>
                <fullName>TESTING</fullName>
                <isActive>false</isActive>
                <label>TESTING</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>