force-app/main/default/objects/Account/fields/Fundraising_Plans__c.field-meta.xml
<CustomField>
    <fullName>Fundraising_Plans__c</fullName>
    <description>Describe your plans for fundraising.</description>
    <label>Fundraising Plans</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>