force-app/main/default/objects/Account/fields/Governing_Organization_Exact_Name__c.field-meta.xml
<CustomField>
    <fullName>Governing_Organization_Exact_Name__c</fullName>
    <inlineHelpText>The name of the 501(c)(3) organization that houses the member programs or the umbrella 501(c)(3) organization or the Fiscal Sponsor</inlineHelpText>
    <label>Governing Organization Exact Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>