force-app/main/default/objects/Account/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <inlineHelpText>Group by organizational model and mission alignment</inlineHelpText>
    <label>Group</label>
    <length>150</length>
    <type>Text</type>
</CustomField>