force-app/main/default/objects/Account/fields/Guidestar_Profile__c.field-meta.xml
<CustomField>
    <fullName>Guidestar_Profile__c</fullName>
    <label>Guidestar Profile</label>
    <type>Url</type>
</CustomField>