force-app/main/default/objects/Account/fields/Have_Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Have_Warehouse__c</fullName>
    <inlineHelpText>Do you have a warehouse?</inlineHelpText>
    <label>Have Warehouse</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Other (Please Specify)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
            <value>
                <fullName>Other Storage</fullName>
                <isActive>false</isActive>
                <label>Other Storage</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>