force-app/main/default/objects/Account/fields/Huggies_2020_Donation__c.field-meta.xml
<CustomField>
    <fullName>Huggies_2020_Donation__c</fullName>
    <label>old-Huggies 2020 Donation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>