force-app/main/default/objects/Account/fields/Huggies_2020_Donations__c.field-meta.xml
<CustomField>
    <fullName>Huggies_2020_Donations__c</fullName>
    <inlineHelpText>Sum from product donation records</inlineHelpText>
    <label>Huggies 2020 Donations</label>
    <summarizedField>Product_Donation__c.Quantity__c</summarizedField>
    <summaryFilterItems>
        <field>Product_Donation__c.Product_Type__c</field>
        <operation>contains</operation>
        <value>Diapers</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Product_Donation__c.Delivery_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2020</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Product_Donation__c.Delivery_Date__c</field>
        <operation>lessOrEqual</operation>
        <value>12/31/2020</value>
    </summaryFilterItems>
    <summaryForeignKey>Product_Donation__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>