force-app/main/default/objects/Account/fields/Huggies_Donation_2014__c.field-meta.xml
<CustomField>
    <fullName>Huggies_Donation_2014__c</fullName>
    <label>Huggies Donation 2014</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>