force-app/main/default/objects/Account/fields/Huggies_Donation_2016__c.field-meta.xml
<CustomField>
    <fullName>Huggies_Donation_2016__c</fullName>
    <description>Huggies Diapers Donated (Wipes are listed under Basic Needs Donations)</description>
    <inlineHelpText>Huggies Diapers Donated (Wipes are listed under Basic Needs Donations)</inlineHelpText>
    <label>Huggies Donation 2016</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>