force-app/main/default/objects/Account/fields/Image_Area__c.field-meta.xml
<CustomField>
    <fullName>Image_Area__c</fullName>
    <description>Area for uploading images for CMS
Arkus, Inc. (AH)</description>
    <label>Image Area</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>