force-app/main/default/objects/Account/fields/Image_Source__c.field-meta.xml
<CustomField>
    <fullName>Image_Source__c</fullName>
    <description>Pathway for image
Arkus, Inc. (AH)</description>
    <label>Image Source</label>
    <type>TextArea</type>
</CustomField>