force-app/main/default/objects/Account/fields/Infant_Toddlers__c.field-meta.xml
<CustomField>
    <fullName>Infant_Toddlers__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Recipient Types includes Infants and Toddlers</description>
    <label>Infant/Toddlers</label>
    <type>Checkbox</type>
</CustomField>