force-app/main/default/objects/Account/fields/Instagram__c.field-meta.xml
<CustomField>
    <fullName>Instagram__c</fullName>
    <inlineHelpText>Enter full URL for Instagram page</inlineHelpText>
    <label>Instagram</label>
    <type>Url</type>
</CustomField>