force-app/main/default/objects/Account/fields/Kit_Composition_mixed_product__c.field-meta.xml
<CustomField>
    <fullName>Kit_Composition_mixed_product__c</fullName>
    <description>Describe what is included in the period product kits that you distribute regularly.
Example:  
Kit A - 10 pads, 10 liners
Kit B - 10 tampons, 10 liners</description>
    <inlineHelpText>Describe what is included in the period product kits that you distribute regularly.
Example:  Kit A - 10 pads, 10 liners</inlineHelpText>
    <label>Kit Composition-mixed product</label>
    <length>100</length>
    <type>Text</type>
</CustomField>