force-app/main/default/objects/Account/fields/Last_APS_Update_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_APS_Update_Date__c</fullName>
    <defaultValue>DateVALUE(&quot;01/01/2021&quot;)</defaultValue>
    <description>The last date a member has to submit their 4th Quarter update before being non-compliant</description>
    <inlineHelpText>The last date a member has to submit their 4th Quarter update before being non-compliant</inlineHelpText>
    <label>Last APS_Update Date</label>
    <type>Date</type>
</CustomField>