force-app/main/default/objects/Account/fields/Lift_Gate_Required__c.field-meta.xml
<CustomField>
    <fullName>Lift_Gate_Required__c</fullName>
    <label>Lift Gate Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Needed</fullName>
            </value>
            <value>
                <fullName>Lift Gate Needed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>