force-app/main/default/objects/Account/fields/Loading_Dock_MP__c.field-meta.xml
<CustomField>
    <fullName>Loading_Dock_MP__c</fullName>
    <description>Members indicated if they have an loading dock with an elevated platform to meet truck level.</description>
    <label>Loading Dock (MP)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>