force-app/main/default/objects/Account/fields/Loading_Dock_or_Forklift_AnSv__c.field-meta.xml
<CustomField>
    <fullName>Loading_Dock_or_Forklift_AnSv__c</fullName>
    <inlineHelpText>Do you have a forklift or raised loading dock/pallet jack combo?</inlineHelpText>
    <label>Loading Dock or Forklift</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>