force-app/main/default/objects/Account/fields/Low_Income_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Low_Income_Percentage__c</fullName>
    <label>Low Income Percentage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>