force-app/main/default/objects/Account/fields/Member_Advisory_Committee__c.field-meta.xml
<CustomField>
    <fullName>Member_Advisory_Committee__c</fullName>
    <label>Member Advisory Committee</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Volunteered</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Former</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>