force-app/main/default/objects/Account/fields/Member_dues_current__c.field-meta.xml
<CustomField>
    <fullName>Member_dues_current__c</fullName>
    <formula>IF( (YEAR(Dues_Expiration_NDBN_only__c) &gt;= YEAR(DATEVALUE( NOW() ))), 
&quot;Yes&quot;, 
&quot;No&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Dues Expiration = This Year</inlineHelpText>
    <label>Member dues current</label>
    <type>Text</type>
</CustomField>