force-app/main/default/objects/Account/fields/Member_Level__c.field-meta.xml
<CustomField>
    <fullName>Member_Level__c</fullName>
    <label>Member Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Certified Member</fullName>
            </value>
            <value>
                <fullName>Established Member</fullName>
            </value>
            <value>
                <fullName>Sustaining Member</fullName>
            </value>
            <value>
                <fullName>Change Leader</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>