force-app/main/default/objects/Account/fields/Menstruators_Served_Monthly__c.field-meta.xml
<CustomField>
    <fullName>Menstruators_Served_Monthly__c</fullName>
    <inlineHelpText>Average number of menstruators that receive period supplies each month</inlineHelpText>
    <label>Menstruators Served Monthly</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>