force-app/main/default/objects/Account/fields/Monthly_Average_Distribution__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Average_Distribution__c</fullName>
    <inlineHelpText>How many diapers do you give out monthly on average?</inlineHelpText>
    <label>AS Monthly Average Distribution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0-500</fullName>
            </value>
            <value>
                <fullName>500-1,000</fullName>
            </value>
            <value>
                <fullName>1,000-2,500</fullName>
            </value>
            <value>
                <fullName>2,500-5,000</fullName>
            </value>
            <value>
                <fullName>5,000-10,000</fullName>
            </value>
            <value>
                <fullName>10,000-25,000</fullName>
            </value>
            <value>
                <fullName>25,000-50,000</fullName>
            </value>
            <value>
                <fullName>50,000+</fullName>
            </value>
            <value>
                <fullName>0</fullName>
                <isActive>false</isActive>
                <label>0</label>
            </value>
            <value>
                <fullName>1000</fullName>
                <isActive>false</isActive>
                <label>1000</label>
            </value>
            <value>
                <fullName>10000</fullName>
                <isActive>false</isActive>
                <label>10000</label>
            </value>
            <value>
                <fullName>2500</fullName>
                <isActive>false</isActive>
                <label>2500</label>
            </value>
            <value>
                <fullName>25000</fullName>
                <isActive>false</isActive>
                <label>25000</label>
            </value>
            <value>
                <fullName>500</fullName>
                <isActive>false</isActive>
                <label>500</label>
            </value>
            <value>
                <fullName>5000</fullName>
                <isActive>false</isActive>
                <label>5000</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>