force-app/main/default/objects/Account/fields/NDBN_Member_Dues_Waiver__c.field-meta.xml
<CustomField>
    <fullName>NDBN_Member_Dues_Waiver__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to let you know if Member Dues Waiver was received</description>
    <inlineHelpText>Checkbox to let you know if Member Dues Waiver was received</inlineHelpText>
    <label>NDBN Dues Waver Used?</label>
    <type>Checkbox</type>
</CustomField>