force-app/main/default/objects/Account/fields/NDBN_Member_End_Date__c.field-meta.xml
<CustomField>
    <fullName>NDBN_Member_End_Date__c</fullName>
    <description>This date capture the today&apos;s date when NDBN member type selected as Left Network.</description>
    <label>NDBN Member End Date</label>
    <type>Date</type>
</CustomField>