force-app/main/default/objects/Account/fields/NDBN_Member_Type__c.field-meta.xml
<CustomField>
    <fullName>NDBN_Member_Type__c</fullName>
    <description>The main categories of membership in NDBN including APS only</description>
    <inlineHelpText>Membership type set by NDBN</inlineHelpText>
    <label>NDBN Member Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Applicant</fullName>
            </value>
            <value>
                <fullName>APS only</fullName>
            </value>
            <value>
                <fullName>Certified</fullName>
                <label>Certified Member</label>
            </value>
            <value>
                <fullName>Change Leader</fullName>
            </value>
            <value>
                <fullName>Established</fullName>
                <label>Established Member</label>
            </value>
            <value>
                <fullName>Outside Network</fullName>
            </value>
            <value>
                <fullName>Left Network</fullName>
            </value>
            <value>
                <fullName>Sustaining</fullName>
                <label>Sustaining Member</label>
            </value>
            <value>
                <fullName>Other-NonMember</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>