force-app/main/default/objects/Account/fields/NDBN_Membership_Date__c.field-meta.xml
<CustomField>
    <fullName>NDBN_Membership_Date__c</fullName>
    <description>Date of official membership. When diaper banks submit signed agreement and 501(c)(3) letter of determination.</description>
    <label>NDBN Membership Date</label>
    <type>Date</type>
</CustomField>