force-app/main/default/objects/Account/fields/NDBN_Partner_Agencies_Served_this_Year__c.field-meta.xml
<CustomField>
    <fullName>NDBN_Partner_Agencies_Served_this_Year__c</fullName>
    <inlineHelpText>The number of partner agencies that distribute product directly to clients</inlineHelpText>
    <label>Partner Agencies-Diaper</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>