force-app/main/default/objects/Account/fields/New_Member_Agreement_Note__c.field-meta.xml
<CustomField>
    <fullName>New_Member_Agreement_Note__c</fullName>
    <label>New Member Agreement Note</label>
    <length>150</length>
    <type>Text</type>
</CustomField>