force-app/main/default/objects/Account/fields/Non_Diaper_Items_Other__c.field-meta.xml
<CustomField>
    <fullName>Non_Diaper_Items_Other__c</fullName>
    <label>Non-Diaper Items - Other</label>
    <type>TextArea</type>
</CustomField>