force-app/main/default/objects/Account/fields/Non_Residential_Storage__c.field-meta.xml
<CustomField>
    <fullName>Non_Residential_Storage__c</fullName>
    <description>Confirms nonresidential storage space, for APS and smaller bulk donations</description>
    <formula>IF(
    ISPICKVAL(Warehouse_Type__c, &quot;Residential space&quot;),
    &quot;No&quot;,
    &quot;Yes&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula returns nonresidential storage space, for APS and smaller bulk donations</inlineHelpText>
    <label>Non-residential Storage</label>
    <type>Text</type>
</CustomField>