force-app/main/default/objects/Account/fields/npe01__One2OneContact__c.field-meta.xml
<CustomField>
    <fullName>npe01__One2OneContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The primary contact for the Account, or the One2One contact for a One2One account.</description>
    <inlineHelpText>Primary point of contact</inlineHelpText>
    <label>Primary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Account</relationshipLabel>
    <relationshipName>Organizations</relationshipName>
    <type>Lookup</type>
</CustomField>