force-app/main/default/objects/Account/fields/npo02__OppAmountThisYear__c.field-meta.xml
<CustomField>
    <fullName>npo02__OppAmountThisYear__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Do not manually update. Updated by automatic processes. See excluded Record Types and FY/CY in Household Settings.</description>
    <label>Total Gifts This Year</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>